# colvert

./: .gitignore  DEVELOPMENT.md  LICENSE.txt  README.md  adev.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
colvert/: __init__.py  __main__.py  ai.py  database.py  demo.py  settings.py
colvert/cli/: __init__.py  ai.py  config.py  daemon.py  sample.py
colvert/database/: __init__.py  database.py  error.py  query.py  result.py
colvert/docs/: ai.md  charts.md  configuration.md  getting-started.md  import-export.md  index.md  samples.md
colvert/docs/charts/pie/: index.md
colvert/docs/charts/table/: index.md
colvert/tests/: conftest.py  test_ai.py  test_database.py  test_settings.py
colvert/tests/database/: test_database.py  test_query.py
colvert/tests/ui/: conftest.py  test_charts.py
colvert/tests/ui/charts/: test_charts.py  test_line.py  test_pie.py  test_types.py
colvert/tests/ui/routes/: conftest.py  test_completion.py  test_components.py  test_docs.py  test_index.py  test_query_form.py  test_results.py
colvert/ui/: __init__.py  components.py  helpers.py
colvert/ui/charts/: __init__.py  base.py  line.py  pie.py  table.py  types.py
colvert/ui/routes/: __init__.py  about.py  completion.py  docs.py  index.py  query_form.py  results.py
colvert/ui/static/: style.css
colvert/ui/static/tabler/: update_tabler.sh
colvert/ui/templates/: _query_form.html.j2  about.html.j2  docs.html.j2  error.html.j2  index.html.j2  info.html.j2  layout.html.j2  results.html.j2  table.html.j2  tables.html.j2  warning.html.j2
colvert/ui/templates/charts/: table.html.j2
logo/: logo.xcf  update_logo.sh
row-groups-zstd.parquet/City=Chicago/: test_0.parquet
row-groups-zstd.parquet/City=Los Angeles/: test_0.parquet
row-groups-zstd.parquet/City=New York/: test_0.parquet
row-groups-zstd.parquet/City=Paris/: test_0.parquet
samples/: test.csv  test.db  test.json  test.parquet  unstructured.json
tools/: record_demo.py
videos/: 084d5867-f7c4-438d-a4b9-2f080768ce7e.webm  7ae8a409-529c-4192-bf89-d3c48b3d8c3e.webm
