[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "colvert"
dynamic = ["version", "dependencies"]
description = "colvert is a Frontend for DuckDB a fast and lightweight in-memory database designed for analytical queries. It's design to be a simple and easy to use tool for data analysis and visualization."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Julien Duponchelle", email = "julien@duponchelle.info" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Visualization",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
colvert = "colvert.__main__:main"

[project.urls]
Documentation = "https://github.com/julien-duponchelle/colvert#readme"
Issues = "https://github.com/julien-duponchelle/colvert/issues"
Source = "https://github.com/julien-duponchelle/colvert"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "colvert/_version.py"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.0.243",
]

[tool.hatch.build]
exclude = [
  "/.github",
]